-
Bug
-
Resolution: Done
-
P2: Important
-
6.1.0
-
f625afb9f353f23345824995a3de55094706cb29 (qt/qtdeclarative/dev)
QtPalette has a Color Role for PlaceholderText
QPalette::PlaceholderText
https://doc.qt.io/qt-6/qpalette.html#ColorRole-enum
However, ColorGroup doesn't have a property for PlaceholderText even though most of the Color Roles are covered.
https://doc.qt.io/qt-6/qquickcolorgroup.html
https://doc.qt.io/qt-6/qml-qtquick-colorgroup.html
Is there a reason for this?
- relates to
-
QTBUG-92947 QPalette doesn't return the correct color when querying QPalette::PlaceholderText
-
- Reported
-
-
QTBUG-86195 QLineEdit placeholderText is black instead of grey
-
- Reported
-
-
QTBUG-93009 QPalette::PlaceholderText color is not followed after setting color in a style sheet
-
- Closed
-
| For Gerrit Dashboard: QTBUG-93746 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 349996,3 | Add placeholderText to SystemPalette and ColorGroup | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 351255,5 | Use the added placeHolderText color available in Palette | dev | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
| 354959,2 | Use the added placeHolderText color available in Palette | 6.2 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |