Add placeholderText to SystemPalette and ColorGroup

By adding placeholderText we are keeping it consistent with QPalette

[ChangeLog][QtQuick] Added placeholderText to SystemPalette and
ColorGroup to keep it in sync with QPalette

Fixes: QTBUG-93746
Change-Id: I6552db0f3ea81e2fee1a0e756873d34f2d574183
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>